--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
+  "private": true,
   "name": "ws-pb-sandbox",
-  "version": "1.0.0",
-  "description": "",
+  "description": "protobuf on ws",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Takaya Kobayashi <y@kbys.tk>",
+  "license": "MIT",
+  "devDependencies": {
+    "google-protobuf": "^3.5.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "ws": "^5.1.1"
+  }
 }
