--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Takaya Kobayashi <y@kbys.tk>",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.11.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
