--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "protobuf on ws",
   "main": "index.js",
   "scripts": {
+    "precommit": "lint-staged",
     "start": "node src/server.js"
   },
   "author": "Takaya Kobayashi <y@kbys.tk>",
@@ -19,6 +20,14 @@
   },
   "dependencies": {
     "google-protobuf": "^3.5.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.4",
     "ws": "^5.1.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
